fix text overflow issue

--- a/src/Grid.less
+++ b/src/Grid.less
@@ -32,8 +32,9 @@
     display: inline-block;
     width: 100%;
     border-bottom: 1px solid #efefef;
-    line-height: 34px;
+    line-height: 40px;
 }
+
 .kuma-grid-row:hover {
   background-color: #fbfbfb;
 }
@@ -48,15 +49,17 @@
 }
 
 
-.kuma-grid-header .kuma-grid-cell > span{
+.kuma-grid-header .kuma-grid-cell > div{
    overflow : visible;
 }
 
-.kuma-grid-cell > span{
-    line-height: 30px;
+.kuma-grid-cell > div{
+    line-height: 40px;
     display: inline-block;
     overflow: hidden;
     text-overflow: ellipsis;
+    vertical-align: middle;
+    height: 40px;
 }
 
 .kuma-grid-cell .kuma-input{
